--- a/PullShotChart.ipynb
+++ b/PullShotChart.ipynb
@@ -483,6 +483,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "QVfEDdlGCzsA"
+      },
+      "source": [
+        "!cp -r all_shot_chart_data /content/drive/MyDrive/CS631-Project"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
