Update comment in code.

--- a/PullShotChart.ipynb
+++ b/PullShotChart.ipynb
@@ -265,7 +265,7 @@
         "    # ['TOP','LEFT'] px from there\n",
         "    shoot_pos = [re.findall('\\d+',pos) for pos in tree.xpath('//*[@class=\"shot-area\"]/div/@style')]\n",
         "\n",
-        "    #[time(minutes:seconds.0), dist shot (ft), game score]\n",
+        "    #[time(minutes:seconds.0), dist shot (ft), game score, player's team]\n",
         "    game_data = [clean_tip_string(string) for string in tree.xpath('//*[@class=\"shot-area\"]/div/@tip')]\n",
         "    \n",
         "    # Extract year is number that represents the season. so 1968-1969 -> 1969.\n",
